# cyberwheel

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cyberwheel/: __main__.py  determinism_0.csv  determinism_1.csv  determinism_2.csv  evaluate_cyberwheel.py  requirements.txt  train_cyberwheel.py
cyberwheel/blue_actions/: blue_action.py
cyberwheel/blue_agents/: __init__.py  inactive_blue_agent.py  random_blue_agent.py  rl_blue_agent.py
cyberwheel/cyberwheel_envs/: .cyberwheel_emulator.py.swp  __init__.py  cyberwheel.py  cyberwheel_dynamic.py  cyberwheel_emulator.py  cyberwheel_multiagent.py  cyberwheel_rl.py  cyberwheel_rl_red.py
cyberwheel/detectors/: alert.py  detector_base.py  handler.py
cyberwheel/emulator/: README.md  emulator_config.yaml  evaluate_cyberwheel_emu.py
cyberwheel/green_agents/: __init__.py  green_agent_base.py  inactive_green_agent.py  scripted_green_agent.py
cyberwheel/legacy/: Quarantine.py  Restore.py  main_multiagent.py  network_funcs.py  restore_reward.py  single-subnet-network.yaml
cyberwheel/network/: __init__.py  host.py  network_base.py
cyberwheel/observation/: __init__.py  blue_observation.py  history.py  observation.py  red_observation.py  windowed_blue_observation.py
cyberwheel/profiler/: __init__.py  __main__.py  baseline_io.py  cli.py  hotspots.py  phase_timer.py  report.py  scenarios.py
cyberwheel/red_actions/: atomic_test.py  red_base.py  technique.py
cyberwheel/red_agents/: __init__.py  art_agent.py  art_campaign.py  (+6 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+267 files in other folders)
